chore: miscellaneous updates and bug fixes across project